--- a/tetrisGame.html
+++ b/tetrisGame.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <!-- Tetis -->
     <div class="game_board_wrap">
       <div id="game_board"></div>
     </div>
